Move buildType to flavor and add hashes for pinning of androidTest dependencies

--- a/briar-android/.gitignore
+++ b/briar-android/.gitignore
@@ -5,3 +5,9 @@ local.properties
 .settings
 src/main/assets/*.zip
 src/main/res/values-iw
+
+# Fastlane Screenshots
+/fastlane/metadata/android/screenshots.html
+/fastlane/metadata/android/*/images
+/fastlane/report.xml
+/fastlane/README.md
