--- a/briar-android/src/screenshot/AndroidManifest.xml
+++ b/briar-android/src/screenshot/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest
 	package="org.briarproject.briar"
 	xmlns:android="http://schemas.android.com/apk/res/android">
+	<!-- The following permissions are only needed for taking automatic screenshots (fastlane) -->
 
 	<!-- Allows unlocking your device and activating its screen so UI tests can succeed -->
 	<uses-permission android:name="android.permission.DISABLE_KEYGUARD"/>
