--- a/briar-android/src/main/AndroidManifest.xml
+++ b/briar-android/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
 	package="org.briarproject.briar"
 	xmlns:android="http://schemas.android.com/apk/res/android">
 
-	<uses-feature android:name="android.hardware.bluetooth"/>
+	<uses-feature android:name="android.hardware.bluetooth" android:required="false"/>
 	<uses-feature android:name="android.hardware.camera" />
 	<uses-feature android:name="android.hardware.touchscreen" android:required="false" />
 
