Rename Main Flavor due to internal conflicts

--- a/briar-android/build.gradle
+++ b/briar-android/build.gradle
@@ -296,7 +296,7 @@ android {
 			minSdkVersion 18
 			applicationIdSuffix ".screenshot" // = org.briarproject.briar.android.screenshot.debug
 		}
-		main {
+		official {
 			dimension "version"
 		}
 	}
