--- a/briar-android/build.gradle
+++ b/briar-android/build.gradle
@@ -155,7 +155,7 @@ task verifyTranslations {
 
 		def folders = ["default", "en-US"]
 		project.file("src/main/res").eachDir { dir ->
-			if (dir.name.startsWith("values-") && !dir.name.endsWith("night")) {
+			if (dir.name.startsWith("values-") && !dir.name.endsWith("night") && !dir.name.endsWith("v21")) {
 				folders.add(dir.name.substring(7).replace("-r", "-"))
 			}
 		}
