--- a/bramble-api/build.gradle
+++ b/bramble-api/build.gradle
@@ -31,3 +31,8 @@ task jarTest(type: Jar, dependsOn: testClasses) {
 artifacts {
 	testOutput jarTest
 }
+
+tasks.withType(Test) {
+	// Use entropy-gathering device specified on command line, if any
+	systemProperty 'java.security.egd', System.getProperty('java.security.egd')
+}
