--- a/bramble-android/build.gradle
+++ b/bramble-android/build.gradle
@@ -55,3 +55,8 @@ project.afterEvaluate {
 		into 'src/main/res/raw'
 	}
 }
+
+tasks.withType(Test) {
+	// Use entropy-gathering device specified on command line, if any
+	systemProperty 'java.security.egd', System.getProperty('java.security.egd')
+}
