--- a/bramble-j2se/build.gradle
+++ b/bramble-j2se/build.gradle
@@ -26,5 +26,7 @@ dependencies {
 }
 
 tasks.withType(Test) {
+	// Use entropy-gathering device specified on command line, if any
+	systemProperty 'java.security.egd', System.getProperty('java.security.egd')
 	systemProperty 'java.library.path', 'libs'
 }
