--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,11 +7,10 @@ test:
 
   cache:
     paths:
-      - .gradle/wrapper
-      - .gradle/caches
+      - $GRADLE_USER_HOME/wrapper
+      - $GRADLE_USER_HOME/caches
 
   script:
-    - ./gradlew --stop
     - ./gradlew --no-daemon animalSnifferMain animalSnifferTest
 
   after_script:
