--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,7 +11,8 @@ test:
       - $GRADLE_USER_HOME/caches
 
   script:
-    - ls -R $GRADLE_USER_HOME/wrapper/dists
+    - ls -R $GRADLE_USER_HOME/wrapper
+    - ls -R $GRADLE_USER_HOME/caches
     - ./gradlew --no-daemon animalSnifferMain animalSnifferTest
 
   after_script:
