--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,8 +11,7 @@ test:
       - $GRADLE_USER_HOME/caches
 
   script:
-    - ls -R $GRADLE_USER_HOME/wrapper
-    - ls -R $GRADLE_USER_HOME/caches
+    - ls -R $GRADLE_USER_HOME
     - ./gradlew --no-daemon animalSnifferMain animalSnifferTest
 
   after_script:
