Fix cache paths.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,8 +8,8 @@ test:
   cache:
     key: potato
     paths:
-      - ./wrapper
-      - ./caches
+      - .gradle/wrapper
+      - .gradle/caches
 
   script:
     - ./gradlew clean
