Enable logging to console for briar-core tests.

--- a/briar-core/build.gradle
+++ b/briar-core/build.gradle
@@ -32,3 +32,9 @@ dependencies {
 
 	signature 'org.codehaus.mojo.signature:java16:1.1@signature'
 }
+
+test {
+	testLogging {
+		events "passed", "skipped", "failed", "standardOut", "standardError"
+	}
+}
