Use /dev/urandom for tests.

--- a/briar-core/build.gradle
+++ b/briar-core/build.gradle
@@ -33,8 +33,7 @@ dependencies {
 	signature 'org.codehaus.mojo.signature:java16:1.1@signature'
 }
 
-test {
-	testLogging {
-		events "passed", "skipped", "failed", "standardOut", "standardError"
-	}
+tasks.withType(Test) {
+	// Use entropy-gathering device specified on command line, if any
+	systemProperty 'java.security.egd', System.getProperty('java.security.egd')
 }
