--- a/bramble-j2se/build.gradle
+++ b/bramble-j2se/build.gradle
@@ -16,7 +16,7 @@ dependencies {
 	implementation fileTree(dir: 'libs', include: '*.jar')
 	implementation 'net.java.dev.jna:jna:4.4.0'
 	implementation 'net.java.dev.jna:jna-platform:4.4.0'
-	tor 'org.briarproject:tor-linux:0.2.9.16@zip'
+	tor 'org.briarproject:tor:0.2.9.16@zip'
 
 	apt 'com.google.dagger:dagger-compiler:2.0.2'
 
