--- a/bramble-java/build.gradle
+++ b/bramble-java/build.gradle
@@ -28,6 +28,8 @@ dependencies {
 	testImplementation "org.jmock:jmock-legacy:2.8.2"
 	testImplementation "org.hamcrest:hamcrest-library:1.3"
 	testImplementation "org.hamcrest:hamcrest-core:1.3"
+
+	testApt 'com.google.dagger:dagger-compiler:2.0.2'
 }
 
 project.afterEvaluate {
