--- a/briar-headless/build.gradle
+++ b/briar-headless/build.gradle
@@ -2,6 +2,7 @@ plugins {
 	id 'java'
 	id 'net.ltgt.apt'
 	id 'idea'
+	id "org.jetbrains.kotlin.jvm" version "1.2.61"
 	id 'witness'
 }
 apply from: 'witness.gradle'
@@ -21,12 +22,12 @@ dependencies {
 
 	testImplementation project(path: ':bramble-api', configuration: 'testOutput')
 	testImplementation project(path: ':bramble-core', configuration: 'testOutput')
-	testImplementation 'junit:junit:4.12'
-	testImplementation "org.jmock:jmock:2.8.2"
-	testImplementation "org.jmock:jmock-junit4:2.8.2"
-	testImplementation "org.jmock:jmock-legacy:2.8.2"
-	testImplementation "org.hamcrest:hamcrest-library:1.3"
-	testImplementation "org.hamcrest:hamcrest-core:1.3"
+
+	def junitVersion = '5.2.0'
+	testImplementation "org.junit.jupiter:junit-jupiter-api:$junitVersion"
+	testImplementation "org.junit.jupiter:junit-jupiter-params:$junitVersion"
+	testRuntime "org.junit.jupiter:junit-jupiter-engine:$junitVersion"
+	testImplementation "io.mockk:mockk:1.8.6"
 }
 
 jar {
@@ -37,5 +38,12 @@ jar {
 	}
 	from {
 		configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
+	}
+}
+
+test {
+	useJUnitPlatform()
+	testLogging {
+		events "passed", "skipped", "failed"
 	}
 }
