--- a/briar-headless/build.gradle
+++ b/briar-headless/build.gradle
@@ -14,11 +14,12 @@ dependencies {
 	implementation project(path: ':briar-core', configuration: 'default')
 	implementation project(path: ':bramble-java', configuration: 'default')
 
-	implementation 'io.javalin:javalin:1.7.0'
+	implementation 'io.javalin:javalin:2.1.0'
 	implementation 'org.slf4j:slf4j-simple:1.7.25'
 	implementation 'com.fasterxml.jackson.core:jackson-databind:2.9.6'
 
 	apt 'com.google.dagger:dagger-compiler:2.0.2'
+	kapt 'com.google.dagger:dagger-compiler:2.0.2'
 
 	testImplementation project(path: ':bramble-api', configuration: 'testOutput')
 	testImplementation project(path: ':bramble-core', configuration: 'testOutput')
