--- a/settings.gradle
+++ b/settings.gradle
@@ -1,7 +1,7 @@
 include ':bramble-api'
 include ':bramble-core'
 include ':bramble-android'
-include ':bramble-j2se'
+include ':bramble-java'
 include ':briar-api'
 include ':briar-core'
 include ':briar-android'
